# pais

./: .gitignore  README.md  architecture.md  pais.toml  pais.yaml  patterns  tech-writing-sample.md
agents/: advisor.yaml  architect.yaml  creative.yaml  engineer.yaml  intern.yaml  researcher.yaml  reviewer.yaml  skeptic.yaml
bundles/test-bundle/: bundle.yaml
docs/: bundle.md  install.md  verify.md
plugins/building-researcher/: SKILL.md  plugin.yaml
plugins/fabric/: SKILL.md  plugin.yaml
plugins/football-researcher/: SKILL.md  plugin.yaml
plugins/gx/: install.md  plugin.yaml
plugins/tech-researcher/: SKILL.md  plugin.yaml
plugins/writing-researcher/: SKILL.md  plugin.yaml
plugins/youtube/: SKILL.md  plugin.yaml  pyproject.toml
plugins/youtube-frames/: DESIGN.md  SKILL.md  detailed-doc.md  plugin.yaml  pyproject.toml
plugins/youtube-frames/src/: main.py
plugins/youtube/src/: main.py
registry/: plugins.yaml
research/management/: responding-to-public-blame.md
research/tech/: jina-ai-and-fabric.md
skills/: context-snippet.md  gx  skill-index.json  skill-index.yaml
skills/acli/: SKILL.md
skills/aka/: SKILL.md
skills/bump/: SKILL.md
skills/cidr/: SKILL.md
skills/clone/: SKILL.md
skills/core/: SKILL.md
skills/create-design-doc/: SKILL.md  example.md  template.md
skills/dashify/: SKILL.md
skills/how-to-execute-a-plan/: SKILL.md
skills/install/: SKILL.md
skills/ls-git-repos/: SKILL.md
skills/ls-github-repos/: SKILL.md
skills/ls-owners/: SKILL.md
skills/ls-stale-branches/: SKILL.md
skills/ls-stale-prs/: SKILL.md
(+30 files in other folders)
