[project]
name = "youtube-frames-plugin"
version = "0.1.0"
description = "PAIS plugin for extracting diagrams and slides from YouTube videos"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
]
claude = [
    "anthropic>=0.30.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "easyocr>=1.7.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
