[project]
name = "youtube-plugin"
version = "0.1.0"
description = "PAIS plugin for YouTube transcript extraction and summarization"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2024.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
